Correção do nome da equipe

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 
             var docDefinition = {
                 content:[
-                    {text: 'Space Rockets',style:'mainHeader'},
+                    {text: 'Space Rocket',style:'mainHeader'},
                     {text: 'Ata da Reunião n°' + ataReuniao.numero, style:'subMainHeader'},
                     {text: ataReuniao.local+ ' - ' + ataReuniao.data , style:'subMainHeaderInfo'},
 
