--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>HomePage para alguns projetos web super <s style="color: #797979"> inúteis</s> úteis. <br>
+								<h1>HomePage para alguns projetos super <s style="color: #797979"> inúteis</s> úteis. <br>
 								Todo código disponível no repositório do <a href="https://github.com/kevinoliveira/kevinoliveira.github.io">GitHub</a>.</h1>
 								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
 							</header>
