Armazenamento em LocalStorage

--- a/projects/Calculadora_nota_final/index.html
+++ b/projects/Calculadora_nota_final/index.html
@@ -4,9 +4,10 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="blaze.min.css">
-      <title>CittiCard Web</title>
+      <title>Calculadora de nota prova final</title>
    </head>
    <body>
+      
       <div class="o-grid o-grid--wrap o-grid--demo">
          <div class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-60@medium o-grid__cell--offset-20@medium " style="margin-top: 5%;margin-bottom: 5%;">
             <!--o-grid__cell--width-60@medium o-grid__cell--offset-20@medium u-center-block-->
