Removendo "veja o quanto está ferrado"

--- a/projects/Calculadora_nota_final/index.html
+++ b/projects/Calculadora_nota_final/index.html
@@ -7,12 +7,12 @@
       <title>Calculadora de nota prova final</title>
    </head>
    <body>
-      
+
       <div class="o-grid o-grid--wrap o-grid--demo">
          <div class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-60@medium o-grid__cell--offset-20@medium " style="margin-top: 5%;margin-bottom: 5%;">
             <!--o-grid__cell--width-60@medium o-grid__cell--offset-20@medium u-center-block-->
             <div class="c-card u-highest">
-               <div class=" c-card__item c-card__item--brand  c-text u-centered u-large"><b>Cálculo de nota necessária na prova final</b><br>Veja o quanto está ferrado</div>
+               <div class=" c-card__item c-card__item--brand  c-text u-centered u-large"><b>Cálculo de nota necessária na prova final</b></div>
                <div class="c-card__item">
                   <p class="c-paragraph c-text u-centered">Coloque nome e a media final da disciplina para descobrir quanto voce precisa tirar no minimo para ser aprovado na final.</p>
                   
