Limpar Historico e Reiniciar campos apos inserção

--- a/projects/Calculadora_nota_final/index.html
+++ b/projects/Calculadora_nota_final/index.html
@@ -76,8 +76,12 @@
                      </div>
 
                      -->
-
+                   
                   </div>
+                  <hr style="border-bottom-width: 0px;border-top-width: 0px;">
+                  <button  class="c-button c-button--block u-small" onclick="clearHistory()" ><b class="c-text" style="color: #fff;font-weight: bold;">Limpar histórico</b></button>  
+
+
                <!--
               
                <div>
