Open graph protocol

--- a/projects/Calculadora_nota_final/index.html
+++ b/projects/Calculadora_nota_final/index.html
@@ -5,6 +5,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="blaze.min.css">
       <title>Calculadora de nota prova final</title>
+      <meta property="og:title" content="Calculadora de prova final">
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://kevinoliveira.github.io/projects/Calculadora_nota_final/index.html">
+      <meta property="og:image:secure_url" content="https://kevinoliveira.github.io/projects/Calculadora_nota_final/img/icon.png">
+      <meta property="og:image" content="https://kevinoliveira.github.io/projects/Calculadora_nota_final/img/icon.png">
+      <meta property="og:image:width" content="1024">
+      <meta property="og:image:height" content="1024">
+      <meta property="og:image:type" content="image/png">
+      <meta property="og:description" content="Calcule quanto precisa pra aprovar na prova final!">
+      <meta name="description" content="Calcule quanto precisa pra aprovar na prova final!">
       <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
       <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
