teste botão online 3

--- a/projects/gerador_de_ata_de_reunião_new_version/index.html
+++ b/projects/gerador_de_ata_de_reunião_new_version/index.html
@@ -311,9 +311,9 @@
                               Kevin Oliveira
                             </span>
                             <span>
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-                                    <i class="material-icons">close</i>
-                                  </button>
+                                <button class="mdl-button mdl-js-button mdl-button--accent">
+                                  Remover
+                                </button>
                             </span>
                           </li>
                           <li class="mdl-list__item">
@@ -321,9 +321,9 @@
                               Icaro Leite
                             </span>
                             <span class="mdl-list__item-secondary-actionm">
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-                                    <i class="material-icons">close</i>
-                                  </button>
+                                <button class="mdl-button mdl-js-button mdl-button--accent">
+                                  Remover
+                                </button>
                             </span>
                           </li>
                                 
