--- a/projects/gerador_de_ata_de_reunião_new_version/index.html
+++ b/projects/gerador_de_ata_de_reunião_new_version/index.html
@@ -305,29 +305,31 @@
                         </div>
                       </fieldset> 
                       <p><b>Presentes:</b></p>
-                      <ul class="demo-list-controls mdl-lists">
-                          <li class="mdl-list__item">
+                      <div>
+                          <div class="mdl-layout__header-row">
                             <span class="mdl-list__item-primary-content">
                               Kevin Oliveira
                             </span>
+                            <div class="mdl-layout-spacer"></div>
                             <span>
                                 <button class="mdl-button mdl-js-button mdl-button--accent">
                                   Remover
                                 </button>
                             </span>
-                          </li>
-                          <li class="mdl-list__item">
+                          </div>
+                          <div class="mdl-layout__header-row">
                             <span class="mdl-list__item-primary-content">
                               Icaro Leite
                             </span>
+                            <div class="mdl-layout-spacer"></div>
                             <span class="mdl-list__item-secondary-actionm">
                                 <button class="mdl-button mdl-js-button mdl-button--accent">
                                   Remover
                                 </button>
                             </span>
-                          </li>
+                          </div>
                                 
-                        </ul>
+                        </div>
                         
                       <fieldset>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
