--- a/projects/gerador_de_ata_de_reunião_new_version/index.html
+++ b/projects/gerador_de_ata_de_reunião_new_version/index.html
@@ -304,6 +304,7 @@
                           <label class="mdl-textfield__label" for="localreu" >Local de reunião</label>
                         </div>
                       </fieldset> 
+                    </form>
                       <p><b>Presentes:</b></p>
                       <div>
                           <div class="mdl-layout__header-row">
@@ -322,6 +323,7 @@
                           </div>
                                 
                         </div>
+                        <form>
                         
                       <fieldset>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
