--- a/projects/gerador_de_ata_de_reunião_new_version/index.html
+++ b/projects/gerador_de_ata_de_reunião_new_version/index.html
@@ -317,7 +317,7 @@
                           <div class="mdl-layout__header-row">
                               Icaro Leite
                             <div class="mdl-layout-spacer"></div>
-                                <button class="mdl-button mdl-js-button mdl-button--accent">
+                                <button >
                                   Remover
                                 </button>
                           </div>
