github speed test

--- a/projects/gerador_de_ata_de_reunião_new_version/index.html
+++ b/projects/gerador_de_ata_de_reunião_new_version/index.html
@@ -315,7 +315,7 @@
                                 </button>
                           </div>
                           <div class="mdl-layout__header-row">
-                              Icaro Leite
+                              Icaro Lite
                             <div class="mdl-layout-spacer"></div>
                                 <button >
                                   Remover
