--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kevin Oliveira/title>
+  <title>Kevin Oliveira</title>
   <meta name="description" content="Kevin Oliveira">
   <meta name="author" content="kevin Oliveira">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
